# Frozone

./: .gitignore  .travis.yml  Frozone.cabal  README.md  build-helper.sh  build-run  config.yml  darcs2.8.5.patch  send_patch
dev-doc/: restapi.md
docker/: Dockerfile  supervisord.conf
jssrc/: frozone.js
res/scripts/fail/: build.sh
res/scripts/success/: build.sh
src/: Main.hs
src/Frozone/: BaseImage.hs  BuildTypes.hs  BundleChecker.hs  Config.hs  Controller.hs  Model.hs  ModelTypes.hs  PackageManager.hs  Persist.hs  PersistMonad.hs  PkgManConnection.hs  Project.hs  RestApi.hs  Server.hs  Types.hs  User.hs  VCS.hs  WebFrontend.hs
src/Frozone/BuildSystem/: API.hs  GlobalState.hs  Impl.hs  Persistence.hs  Scheduling.hs  ThreadMonad.hs
src/Frozone/BuildSystem/Intern/: Model.hs  Queue.hs  Types.hs
src/Frozone/BuildSystem/Scheduling/: Model.hs
src/Frozone/BundleChecker/: API.hs  Implementation.hs
src/Frozone/PackageManager/: API.hs  Connection.hs
src/Frozone/Project/: API.hs  DB.hs
src/Frozone/Tests/: TestBuildSystem.hs  TestBuildSystem_Impl.hs  TestBuildSystem_Model.hs  TestQueue.hs  TestScheduler.hs  TestScheduler_Impl.hs  TestScheduler_Model.hs
src/Frozone/User/: API.hs  DB.hs
src/Frozone/UserManagement/: Model.hs  Test.hs
src/Frozone/Util/: Concurrency.hs  Db.hs  Docker.hs  Email.hs  ErrorHandling.hs  File.hs  General.hs  Json.hs  Logging.hs  Process.hs  Queue.hs  Random.hs  Rest.hs  Spock.hs  Testing.hs
src/Frozone/Util/Concurrency/: SafeGlob.hs  Scheduling.hs
src/Frozone/Util/Concurrency/Scheduling/: Model.hs
src/Frozone/VCS/: Darcs.hs  Types.hs
src/Frozone/VCS/Darcs/: Api.hs
static/css/: site.css
