name:                Frozone
version:             0.1.0.0
synopsis:            A simple darcs patch checker and deployer
description:         Check patchbundles using darcs push and docker.
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <thiemann@cp-med.com>
maintainer:          thiemann@cp-med.com
copyright:           (c) 2014 factis research GmbH
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable Frozone
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.6.*,
                       http-types >=0.8 && <0.9,
                       Spock >=0.4 && <0.5,
                       text >=1.1 && <1.2,
                       persistent-sqlite >=1.3 && <1.4,
                       persistent-template >=1.3 && <1.4,
                       resourcet >=0.4 && <0.5,
                       mtl >=2.1 && <2.2,
                       monad-logger >=0.3 && <0.4,
                       bytestring >=0.10 && <0.11,
                       time >=1.4 && <1.5,
                       old-locale >=1.0 && <1.1,
                       process >=1.1 && <1.2,
                       temporary >=1.2 && <1.3,
                       aeson >=0.7 && <0.8,
                       safe >=0.3 && <0.4,
                       filepath >=1.3 && <1.4,
                       base16-bytestring >=0.1 && <0.2,
                       random >=1.0 && <1.1,
                       persistent >=1.3 && <1.4,
                       path-pieces >=0.1 && <0.2,
                       directory >=1.2 && <1.3,
                       MissingH >=1.2 && <1.3,
                       yaml >=0.8 && <0.9,
                       cryptohash >=0.11 && <0.12,
                       wai-extra >=2.0 && <2.1,
                       unordered-containers >=0.2 && <0.3,
                       stm >=2.4 && <2.5
  hs-source-dirs:      src
  ghc-options: -Wall -fno-warn-orphans -fno-warn-missing-signatures
