name:                Frozone
version:             0.1.0.0
synopsis:            A simple darcs patch checker and deployer
description:         Check patchbundles using darcs push and docker.
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <thiemann@cp-med.com>
maintainer:          thiemann@cp-med.com
copyright:           (c) 2014 factis research GmbH
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable Frozone
  main-is:             Main.hs
  build-depends:       base ==4.6.*,
                       MissingH >=1.2 && <1.3,
                       Spock >=0.6.1.3 && <0.7,
                       Spock-worker >=0.2 && <0.3,
                       aeson >=0.7 && <0.8,
                       base16-bytestring >=0.1 && <0.2,
                       blaze-html >=0.6 && <0.8,
                       bytestring >=0.10 && <0.11,
                       conduit >=1.1 && <1.2,
                       conduit-extra >=1.1 && <1.2,
                       convertible >=1.0 && <1.1,
                       cryptohash >=0.11 && <0.12,
                       darcs >=2.8.5 && <2.9,
                       directory >=1.2 && <1.3,
                       dockercook >=0.1.2.1 && <0.2,
                       filepath >=1.3 && <1.4,
                       hashed-storage >=0.5.6 && <0.6,
                       http-types >=0.8 && <0.9,
                       monad-logger >=0.3 && <0.4,
                       mtl >=2.1 && <2.3,
                       old-locale >=1.0 && <1.1,
                       path-pieces >=0.1 && <0.2,
                       persistent >=1.3 && <1.4,
                       persistent-sqlite >=1.3 && <1.4,
                       persistent-template >=1.3 && <1.4,
                       pretty >=1.1 && <1.2,
                       process >=1.1 && <1.2,
                       random >=1.0 && <1.1,
                       resourcet >=0.3 && <1.2,
                       safe >=0.3 && <0.4,
                       smtp-mail >=0.1 && <0.2,
                       stm >=2.4 && <2.5,
                       transformers >=0.3 && <0.4,
                       temporary >=1.2 && <1.3,
                       text >=0.10 && <1.2,
                       time >=1.4 && <1.5,
                       unordered-containers >=0.2 && <0.3,
                       wai >=3.0 && <3.1,
                       wai-extra >=3.0 && <3.1,
                       wai-middleware-static >=0.6 && <0.7,
                       yaml >=0.8 && <0.9
  hs-source-dirs:      src
  ghc-options: -Wall -fno-warn-orphans -fno-warn-missing-signatures -fno-warn-unused-do-bind -threaded
